syntax = "proto3";
package akira.config;

import "common.proto";

service Config {
    rpc Upsert(ConfigMessage) returns (akira.common.OperationId);
    rpc Delete(ConfigIdRequest) returns (akira.common.OperationId);
    rpc Query(QueryConfigRequest) returns (QueryConfigResponse);
}

message ConfigIdRequest {
    string config_id = 1;
}

message ListConfigRequest {}

message QueryConfigRequest {
    string model_name = 1;
    string model_id = 2;
}

message QueryConfigResponse {
    repeated ConfigMessage configs = 1;
}

message ConfigMessage {
    string id = 1;

    string key = 2;
    string value = 3;

    string owning_model = 4; // deployment:342 || workload:123
    int32  value_type = 5;
}
